fix: adjust spacing and create missing shadow on desktop

--- a/pages/03-nft-preview-component/css/style.css
+++ b/pages/03-nft-preview-component/css/style.css
@@ -9,6 +9,32 @@ html {
   box-sizing: border-box;
   font-size: 62.5%; }
 
+@font-face {
+  font-family: "Outfit";
+  font-style: normal;
+  font-weight: 300;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/outfit/v4/QGYvz_MVcBeNP4NJtEtq.woff2) format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD; }
+
+/* latin */
+@font-face {
+  font-family: "Outfit";
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/outfit/v4/QGYvz_MVcBeNP4NJtEtq.woff2) format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD; }
+
+/* latin */
+@font-face {
+  font-family: "Outfit";
+  font-style: normal;
+  font-weight: 600;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/outfit/v4/QGYvz_MVcBeNP4NJtEtq.woff2) format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD; }
+
 body {
   font: 300 1.6rem "Outfit", sans-serif; }
 
@@ -28,9 +54,11 @@ body {
         color: #00fff7; } }
 
 .details__paragraph {
+  margin-top: 1rem;
   line-height: 160%; }
   @media screen and (min-width: 65.25em) {
     .details__paragraph {
+      margin-top: 0;
       font-size: 1.8rem; } }
 
 .info__price {
@@ -63,9 +91,10 @@ body {
 .card {
   display: flex;
   flex-direction: column;
-  gap: 2.4rem;
+  gap: 1.5rem;
   padding: 2.4rem;
   width: 32.7rem;
+  height: 54.5rem;
   border-radius: 1.5rem;
   background-color: #14253d;
   margin: 0 auto; }
@@ -81,7 +110,8 @@ body {
     margin: 0 auto;
     position: relative; }
     .card__preview img {
-      width: 100%; }
+      width: 100%;
+      height: 100%; }
     @media screen and (min-width: 65.25em) {
       .card__preview {
         width: 30rem;
@@ -99,15 +129,19 @@ body {
           position: absolute; }
         .card__preview-hover:hover::after {
           opacity: 1; } }
+  @media screen and (min-width: 65.25em) {
+    .card {
+      box-shadow: 0 1rem 0.5rem 2rem rgba(0, 0, 0, 0.05), 0 2rem 0.5rem 5rem rgba(0, 0, 0, 0.025); } }
 
 .details {
   display: flex;
   flex-direction: column;
   gap: 1.5rem; }
-  .details__summary {
-    display: flex;
-    flex-direction: column;
-    gap: 1.5rem; }
+  @media screen and (min-width: 65.25em) {
+    .details__summary {
+      display: flex;
+      flex-direction: column;
+      gap: 1.5rem; } }
   .details__separator {
     width: 100%;
     height: 1px;
@@ -115,8 +149,7 @@ body {
 
 .info {
   display: flex;
-  justify-content: space-between;
-  padding-top: 0.5rem; }
+  justify-content: space-between; }
   @media screen and (min-width: 65.25em) {
     .info {
       margin-bottom: 1rem; } }
@@ -146,7 +179,7 @@ body {
 
 .author {
   display: flex;
-  padding: 0.5rem;
+  padding: 0.75rem 0.25rem;
   letter-spacing: -0.02em;
   margin-left: 4.5rem;
   position: relative; }
