--- a/pages/03-nft-preview-component/sass/components/_card.scss
+++ b/pages/03-nft-preview-component/sass/components/_card.scss
@@ -1,8 +1,9 @@
 .card {
   @include flexColumn;
-  gap: 2.4rem;
+  gap: 1.5rem;
   padding: 2.4rem;
   width: 32.7rem;
+  height: 54.5rem;
   border-radius: 1.5rem;
   background-color: $card-bg;
   margin: 0 auto;
@@ -22,6 +23,7 @@
 
     img {
       width: 100%;
+      height: 100%;
     }
 
     @include desktop {
@@ -46,6 +48,11 @@
       }
     }
   }
+
+  @include desktop {
+    box-shadow: 0 1rem 0.5rem 2rem rgba(0, 0, 0, 0.05),
+      0 2rem 0.5rem 5rem rgba(0, 0, 0, 0.025);
+  }
 }
 
 .details {
@@ -53,8 +60,10 @@
   gap: 1.5rem;
 
   &__summary {
-    @include flexColumn;
-    gap: 1.5rem;
+    @include desktop {
+      @include flexColumn;
+      gap: 1.5rem;
+    }
   }
 
   &__separator {
@@ -67,7 +76,6 @@
 .info {
   display: flex;
   justify-content: space-between;
-  padding-top: 0.5rem;
 
   @include desktop {
     margin-bottom: 1rem;
@@ -107,7 +115,7 @@
 
 .author {
   display: flex;
-  padding: 0.5rem;
+  padding: 0.75rem 0.25rem;
   letter-spacing: -0.02em;
   margin-left: 4.5rem;
   position: relative;
